--- a/src/app/containers/scoreboard/timer/timer.component.scss
+++ b/src/app/containers/scoreboard/timer/timer.component.scss
@@ -72,7 +72,7 @@
 
     .scoreboard-timer {
       margin-left: 0;
-      margin-top: 5px !important;
+      margin-top: -5px !important;
     }
   }
 }
