--- a/src/styles.scss
+++ b/src/styles.scss
@@ -654,16 +654,7 @@ button.mat-mdc-menu-trigger {
     margin-top: -5px !important;
   }
 
-  // Timer section nudge down 5px and right 5px
-  codelab-scoreboard .scoreboard__timer {
-    margin-top: 10px !important;
-    margin-right: -5px !important;
-  }
-
-  // Score section nudge left 5px
-  codelab-scoreboard .scoreboard__score {
-    margin-left: -5px !important;
-  }
+  // Score/Timer positioning handled in component scss
 
   // Constrain mat-toolbar width inside score
   codelab-scoreboard-score mat-toolbar,
